2002-02-01  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* docs/gdmconfig/eu/figures: updated two images
	* gui/gdmlanguages.c: added some more languages for the menu
	  and corrected the Hebrew locale name ('iw' lang code has been
	  superseeded with 'he')

2002-01-31  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in, docs/Makefile.am, docs/gdmconfig/Makefile.am,
	  docs/eu/, docs/gdmconfig/eu/ : Added Basque help files 

2002-02-01  Kjartan Maraas  <kmaraas@gnome.org>

	* daemon/gdm.c: Fix a typo.
	* daemon/verify-pam.c: Same.
	
2002-01-21  Alexander Shopov  <al_shopov@web.bg>

	* configure.in (ALL_LINGUAS): Added "bg".

2002-01-04  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in (ALL_LINGUAS): Added "eu".

Mon Dec 31 18:55:07 2001  George Lebl <jirka@5z.com>

	* Release 2.2.5.4

Mon Dec 31 18:54:25 2001  George Lebl <jirka@5z.com>

	* configure.in, NEWS: raise version

	* daemon/slave.c: set egid to the correct value before we do setuid
	  to avoid running the session with gdm group privilages.  (Note
	  that all session files run bash and thus drop those, but this
	  is a problem for the failsafes)

	* gui/gdmlogin.c: Make PositionX and PositionY follow the standard
	  X geometry behaviour where negative values mean position from
	  lower/right edge

Thu Dec 27 00:59:43 2001  George Lebl <jirka@5z.com>

	* Release 2.2.5.3

Wed Dec 26 17:20:28 2001  George Lebl <jirka@5z.com>

	* daemon/veriyfy-crypt.c, daemon/verify-shadow.c: include
	  errorgui.h

Thu Dec 20 17:13:24 2001  George Lebl <jirka@5z.com>

	* configure.in: raise version

Thu Dec 20 16:27:40 2001  George Lebl <jirka@5z.com>

	* daemon/verify-pam.c: apparently the actually correct
	  order (Which actually makes sense) is setcred/open_session.
	  This is apparently the 'offical' word from the linux-pam
	  people.  Though not everybody agrees.  Well screw this,
	  this makes sense, so this is the way it will be damnit :)

	* gui/gdmconfig.c: fix saving of server definitions
