@@ -532,7 +532,7 @@ gdm_verify_setup_user (GdmDisplay *d, const gchar *login, const gchar *display)
 	gdm_error (_("User %s not permitted to gain access at this time"), login);
 	gdm_error_box (cur_gdm_disp,
 		       GNOME_MESSAGE_BOX_ERROR,
-		       _("\nThe system administrator has your disabled access to the system temporary."));
+		       _("\nThe system administrator has disabled your access to the system temporary."));
 	goto setup_pamerr;
     default :
 	if (gdm_slave_should_complain ())
