@@ -27,7 +27,7 @@ gchar *s = N_("Greeter Look and Feel");
 gchar *s = N_("Show the \"System\" menu.  This has the shutdown, reboot and configuration items");
 gchar *s = N_("Show the 'system' menu, (for reboot, shutdown etc.)");
 gchar *s = N_("Allow users to run the configurator from the system menu");
-gchar *s = N_("If the user fails to authenticate himself the login window should Quiver to indicate failiure");
+gchar *s = N_("If the user fails to authenticate himself the login window should Quiver to indicate failure");
 gchar *s = N_("Quiver on failure");
 gchar *s = N_("Show the title bar on the login window.  If this is off the user won't be able to move nor iconify the login window");
 gchar *s = N_("Show title bar on login window");
