@@ -1,3 +1,10 @@
+2002-02-04  Karsten Weiss  <knweiss@gmx.de>
+
+	* config/gettextfoo.h: Fixed a typo. 
+	* daemon/verify-pam.c: Ditto.
+	* daemon/gdm.c: Ditto.
+	* gui/gdmconfig-strings.c: Ditto. 
+
 2002-02-01  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* docs/gdmconfig/eu/figures: updated two images
